@@ -3,6 +3,7 @@
 """
 __author__ = 'Martin Blais <blais@furius.ca>'
 
+import argparse
 import datetime
 import logging
 import os
@@ -26,10 +27,14 @@ def find_index_document(service):
     Returns:
       A string, the document id.
     """
-    query = "title = 'Beancount - Index'"
+    query = "name = 'Beancount - Index'"
     listing = service.files().list(q=query).execute()
-    for item in listing['items']:
-        return item['id']
+    files = listing['files']
+    if len(files) != 1:
+        raise ValueError("Could not find the index file: "
+                         "{} files matched".format( len(files)))
+    for file in files:
+        return file['id']
 
 
 def enumerate_linked_documents(service, indexid):
@@ -41,11 +46,11 @@ def enumerate_linked_documents(service, indexid):
     Returns:
       A list of link strins.
     """
-    doc = service.files().get(fileId=indexid).execute()
-    link = doc['exportLinks']['text/html']
-    contents = request.urlopen(link).read().decode('utf8')
+    doc = service.files().export(fileId=indexid,
+                                 mimeType='text/html').execute()
+    contents = doc.decode('utf8')
     docids = [indexid]
-    for match in re.finditer('https?://docs.google.com/document/d/([^/]+)/', contents):
+    for match in re.finditer('https?://docs.google.com/document/d/([^/";&]+)', contents):
         docid = match.group(1)
         if docid not in docids:
             docids.append(docid)
@@ -67,17 +72,18 @@ def download_docs(service, docids, tempdir):
     for index, docid in enumerate(docids, 1):
         # Get the document metadata.
         metadata = service.files().get(fileId=docid).execute()
-        title = metadata['title']
-        url = metadata['exportLinks'][mime_type]
+        name = metadata['name']
 
         # Retrieve to a file.
-        clean_title = re.sub('_-_', '-',
-                             re.sub('_+', '_',
-                                    re.sub('[^A-Za-z0-9=-]', '_', title)))
-        filename = path.join(tempdir, '{}.pdf'.format(clean_title))
-        logging.info('Downloading "{}" ({}) to {}'.format(title, docid, filename))
-        if not path.exists(filename):
-            request.urlretrieve(url, filename)
+        clean_name = re.sub('_-_', '-',
+                            re.sub('_+', '_',
+                                   re.sub('[^A-Za-z0-9=-]', '_', name)))
+        filename = path.join(tempdir, '{}.pdf'.format(clean_name))
+        logging.info('Exporting "{}" ({}) to {}'.format(name, docid, filename))
+        with open(filename, 'wb') as outfile:
+            exported = service.files().export(fileId=docid,
+                                              mimeType='application/pdf').execute()
+            outfile.write(exported)
 
         # Check if the downloaded succeeded.
         contents = open(filename, 'rb').read(1024).decode('utf-8', 'ignore')
@@ -112,7 +118,7 @@ def collate_filenames(filenames, output_filename):
 
 def main():
     logging.basicConfig(level=logging.INFO, format='%(levelname)-8s: %(message)s')
-    parser = gauth.get_argparser(description=__doc__.strip())
+    parser = argparse.ArgumentParser(description=__doc__.strip())
 
     default_path = path.abspath(datetime.date.today().strftime('beancount.%Y-%m-%d.pdf'))
     parser.add_argument('-o', '--output', action='store',
@@ -126,12 +132,12 @@ def main():
 
     # Connect, with authentication.
     scopes = ['https://www.googleapis.com/auth/drive']
-    http = gauth.get_authenticated_http(scopes, args)
+    http = gauth.get_auth_via_service_account(scopes, args)
+    service = discovery.build('drive', 'v3', http=http)
 
-    # Access the drive API.
-    service = discovery.build('drive', 'v2', http=http)
-
+    # Get the list of documents.
     indexid = find_index_document(service)
+    assert indexid
     docids = enumerate_linked_documents(service, indexid)
 
     try:
